# readme_checkers

./: Cargo.toml  REDME.md
.github/workflows/: ci.yaml
src/: main.rs
src/checkers/: game.rs
